Fix the alignment issue of carousel because of the change of bootstrap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -537,7 +537,7 @@ ul#social-icon a:hover {
 
 /* Indicators list style */
 .article-slide .carousel-indicators {
-    bottom: 0;
+    bottom: -120px;
     left: 0;
     margin-left: 5px;
     width: 100%;
@@ -554,7 +554,6 @@ ul#social-icon a:hover {
     margin-left: 0;
     margin-right: 5px !important;
     margin-top: 0;
-    bottom: -120px;
 }
 
 /* Indicators images style */
@@ -804,14 +803,75 @@ ul#social-icon a:hover {
 }
 
 
-/** Toast **/
 .message-container {
     position: fixed;
     top: 72px;
     right: 15px;
-    z-index: 99999999;
+    z-index: 99999999999;
 }
 
 .custom-toast {
     overflow: visible;
+}
+
+.message-container > .hide {
+    display: none;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
+/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent; 
+    border-bottom: 10px solid black;
+    position: absolute;
+    top: -10px;
+    right: 36px;
+}
+
+/* Convenience classes - colors copied from Bootstrap */
+.arrow-primary {
+    border-bottom-color: #007bff !important;
+}
+
+.arrow-secondary {
+    border-bottom-color: #6c757d !important;
+}
+
+.arrow-success {
+    border-bottom-color: #28a745 !important;
+}
+
+.arrow-danger {
+    border-bottom-color: #dc3545 !important;
+}
+
+.arrow-warning {
+    border-bottom-color: #ffc107 !important;
+}
+
+.arrow-info {
+    border-bottom-color: #17a2b8 !important;
+}
+
+.arrow-light {
+    border-bottom-color: #f8f9fa !important;
+}
+
+.arrow-dark {
+    border-bottom-color: #343a40 !important;
+}
+
+/* This whole div will have a max height of 100 pixels.
+Have horizontal overflow hidden.
+And vertical overflow will turn into a scrollbar when the height is greater than 100 pixels.*/
+.bag-notification-wrapper {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
